[package]
name = "melody"
description = "The Melody language compiler"
homepage = "https://github.com/yoav-lavi/melody"
repository = "https://github.com/yoav-lavi/melody"
readme = "README.md"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"
license = "MIT"
keywords = ["melody", "melodylang"]

[dependencies]
logos = "0.12.0"
