[package]
name = "melody_cli"
description = "A CLI wrapping the Melody language compiler"
homepage = "https://github.com/yoav-lavi/melody"
repository = "https://github.com/yoav-lavi/melody"
readme = "README.md"
version = "0.18.1"
edition = "2021"
rust-version = "1.58.0"
license = "MIT/Apache-2.0"
keywords = ["melody", "melodylang", "language", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
colored = "2.0.0"
thiserror = "1.0.31"
anyhow = "1.0.58"
melody_compiler = { version = "0.18.1", path = "../melody_compiler" }
atty = "0.2.14"
exitcode = "1.1.2"
clap_generate = "3.0.3"
regress = "0.4.1"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
unindent = "0.1.9"
tempfile = "3.3.0"

[[bin]]
name = "melody"
path = "./src/main.rs"
