[package]
name = "melody_cli"
description = "A CLI wrapping the Melody language compiler"
homepage = "https://github.com/yoav-lavi/melody"
repository = "https://github.com/yoav-lavi/melody"
readme = "README.md"
version = "0.20.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["melody", "melodylang", "language", "cli"]
categories = ["command-line-utilities"]

[package.metadata]
msrv = "1.74.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
thiserror = "2"
anyhow = "1"
melody_compiler = { version = "0.20.0", path = "../melody_compiler" }
exitcode = "1"
clap_complete = "4"
regress = "0.10"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
unindent = "0.2"
tempfile = "3"

[[bin]]
name = "melody"
path = "./src/main.rs"
