[package]
name = "melody_compiler"
description = "The Melody language compiler"
homepage = "https://github.com/yoav-lavi/melody"
repository = "https://github.com/yoav-lavi/melody"
readme = "README.md"
version = "0.17.0"
edition = "2021"
rust-version = "1.58.0"
license = "MIT"
keywords = ["melody", "melodylang", "language", "compiler"]
categories = ["compilers"]

[features]
fuzzer = ["arbitrary"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
once_cell = "1.10.0"
arbitrary = { version = "1", features = ["derive"], optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
