[package]
name = "melody_compiler"
description = "The Melody language compiler"
homepage = "https://github.com/yoav-lavi/melody"
repository = "https://github.com/yoav-lavi/melody"
readme = "README.md"
version = "0.19.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["melody", "melodylang", "language", "compiler"]
categories = ["compilers"]

[features]
fuzzer = ["arbitrary"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
once_cell = "1.12.0"
arbitrary = { version = "1.1.3", features = ["derive"], optional = true }
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.5.1"
indoc = "2.0.3"

[[bench]]
name = "benchmark"
harness = false
