[package]
name = "melody_compiler"
description = "The Melody language compiler"
homepage = "https://github.com/yoav-lavi/melody"
repository = "https://github.com/yoav-lavi/melody"
readme = "README.md"
version = "0.20.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["melody", "melodylang", "language", "compiler"]
categories = ["compilers"]

[package.metadata]
msrv = "1.74.0"

[features]
fuzzer = ["arbitrary"]

[dependencies]
pest = "2"
pest_derive = "2"
once_cell = "1"
arbitrary = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
indoc = "2"

[[bench]]
name = "benchmark"
harness = false
