[package]
name = "melody_wasm"
version = "0.13.5"
edition = "2021"
rust-version = "1.58.0"
description = "WASM bindings for the Melody language compiler"
license = "MIT"
repository = "https://github.com/yoav-lavi/melody"
keywords = ["melody", "melodylang", "language", "wasm"]
categories = ["webassembly"]


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
melody_compiler = { version = "0.13.5", path = "../melody_compiler" }
