[package]
name = "melody_wasm"
version = "0.19.0"
edition = "2021"
rust-version = "1.71.0"
description = "WASM bindings for the Melody language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoav-lavi/melody"
keywords = ["melody", "melodylang", "language", "wasm"]
categories = ["webassembly"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
console_error_panic_hook = "0.1.7"
melody_compiler = { version = "0.19.0", path = "../melody_compiler", default-features = false }
