[package]
name = "melody_wasm"
version = "0.20.0"
edition = "2021"
description = "WASM bindings for the Melody language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoav-lavi/melody"
keywords = ["melody", "melodylang", "language", "wasm"]
categories = ["webassembly"]

[package.metadata]
msrv = "1.74.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
melody_compiler = { version = "0.20.0", path = "../melody_compiler", default-features = false }
